# arc-node

./: .dockerignore  .gitignore  .licenseignore  ACCOUNTS.md  BREAKING_CHANGES.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  atlantis.yaml  docker-bake.hcl  foundry.toml  hardhat.config.ts  package-lock.json  package.json
.cargo/: audit.toml
.github/workflows/: ci.yml  (+6 more)
arcup/: arcup  install  test_arcup.sh
contracts/: README.md
crates/test/integration/: Cargo.toml  README.md
crates/test/integration/src/: bridge.rs  lib.rs  runner.rs
crates/test/integration/tests/: basic.rs
deployments/: Dockerfile.consensus  Dockerfile.engine-bench  Dockerfile.execution  arc_execution.yaml  docker-compose.yml  monitoring.yaml
docs/: ARCHITECTURE.md  PROFILING.md  arc-relay-bridge-tools.md  building-payment-contracts.md  cctp-v2-integration.md  cctp-v2-receive-message.md  cctp-v2.md  contract-verification.md  dapp-development.md  dapp-security.md  deploying-contracts.md  deploying-smart-contracts-with-foundry.md  erc-4337.md  installation.md  metamask-integration.md  monitoring.md  receivables-financing-pattern.md  release-flow-test.md  running-an-arc-node-docker.md  running-an-arc-node.md  svg-tokenuri-security.md  transaction-memos.md
scripts/: create-public-release-tag.sh  create-release-tag.sh  engine-bench-report.py  localdev.mjs  publish-crates.sh  register-validator.sh  release-config.sh  release-package.sh  release-refs.sh  resolve-public-sync-refs.sh  test-release-scenario.sh  test-release-scripts.sh  test_engine_bench_report.py
src/: lib.rs
(+443 files in other folders)
