[package]
name = "arc-node"
version = "0.0.0-placeholder"
edition = "2021"
description = "Placeholder package for Arc Node, Circle's L1 blockchain node software."
license = "Apache-2.0"
repository = "https://github.com/circlefin/arc-node"
readme = "README.md"
include = ["Cargo.toml", "README.md", "LICENSE", "src/lib.rs"]

[lib]
path = "src/lib.rs"

[workspace]
